--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -37,8 +37,10 @@ jobs:
         env:
           CLEAN_BASE_REF: ${{ steps.git-refs.outputs.base-ref }}
           CLEAN_HEAD_REF: ${{ steps.git-refs.outputs.head-ref }}
+          UPSTREAM_REMOTE: ${{ github.repository }}
         run: |
-          git fetch --progress --depth=1 origin "+refs/heads/$CLEAN_BASE_REF:refs/heads/$CLEAN_BASE_REF"
+          git remote add upstream $UPSTREAM_REMOTE
+          git fetch --progress --depth=1 upstream "+refs/heads/$CLEAN_BASE_REF:refs/heads/$CLEAN_BASE_REF"
           MAX_ATTEMPTS=10
           ATTEMPT=0
           while [ -z "$( git merge-base "refs/heads/$CLEAN_BASE_REF" "$CLEAN_HEAD_REF" )" ] && [ "$ATTEMPT" -lt "$MAX_ATTEMPTS" ]; do
