--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -37,14 +37,16 @@ jobs:
         env:
           CLEAN_BASE_REF: ${{ steps.git-refs.outputs.base-ref }}
           CLEAN_HEAD_REF: ${{ steps.git-refs.outputs.head-ref }}
-          UPSTREAM_REMOTE: ${{ github.server_url }}/${{ github.repository }}
+          # We are not using
+          UPSTREAM_REMOTE: ${{ github.server_url }}/${{ github.repositoryUrl }}
         run: |
           git remote add upstream $UPSTREAM_REMOTE
           git fetch --progress --depth=1 upstream "+refs/heads/$CLEAN_BASE_REF:refs/heads/$CLEAN_BASE_REF"
           MAX_ATTEMPTS=10
           ATTEMPT=0
           while [ -z "$( git merge-base "refs/heads/$CLEAN_BASE_REF" "$CLEAN_HEAD_REF" )" ] && [ "$ATTEMPT" -lt "$MAX_ATTEMPTS" ]; do
-            git fetch -q --deepen=10 upstream "refs/heads/$CLEAN_BASE_REF" "$CLEAN_HEAD_REF"
+            git fetch -q --deepen=10 upstream "refs/heads/$CLEAN_BASE_REF"
+            git fetch -q --deepen=10 origin "$CLEAN_HEAD_REF"
             ATTEMPT=$((ATTEMPT + 1))
           done
           if [ "$ATTEMPT" -ge "$MAX_ATTEMPTS" ]; then
