--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -3,6 +3,8 @@ on:
     secrets:
       CODECOV_TOKEN:
         required: false
+      LHCI_GITHUB_APP_TOKEN:
+        required: false
     inputs:
       runs-on:
         required: true
