--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -197,9 +197,10 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    env:
       LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
     with:
-      runs-on: lynx-ubuntu-24.04-medium
+      runs-on: lynx-ubuntu-24.04-xlarge
       is-web: true
       run: |
         pnpm --filter @lynx-js/web-tests run lh
