--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -202,6 +202,7 @@ jobs:
       runs-on: lynx-ubuntu-24.04-xlarge
       is-web: true
       run: |
+        export NODE_OPTIONS="--max-old-space-size=32768"
         pnpm --filter @lynx-js/web-tests run lh
   test-rust:
     needs: build
