--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
 permissions:
   repository-projects: read
   contents: read
-  statuses: write
+  statuses: read
 env:
   CI: 1
   TURBO_TELEMETRY_DISABLED: 1
@@ -195,6 +195,8 @@ jobs:
   lighthouse:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
+    permissions:
+      statuses: write
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
