--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -196,6 +196,8 @@ jobs:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
     permissions:
+      contents: read
+      pull-requests: read
       statuses: write
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
