--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,8 +71,12 @@ jobs:
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+      TOS_AP_ACCESS_KEY: ${{ secrets.TOS_AP_ACCESS_KEY }}
+      TOS_AP_SECRET_KEY: ${{ secrets.TOS_AP_SECRET_KEY }}
+      TOS_AP_ENDPOINT: ${{ secrets.TOS_AP_ENDPOINT }}
+      TOS_AP_REGION: ${{ secrets.TOS_AP_REGION }}
     with:
-      runs-on: lynx-ubuntu-24.04-xlarge
+      runs-on: lynx-container
       is-web: true
       run: |
         export NODE_OPTIONS="--max-old-space-size=32768"
@@ -82,6 +86,10 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      TOS_AP_ACCESS_KEY: ${{ secrets.TOS_AP_ACCESS_KEY }}
+      TOS_AP_SECRET_KEY: ${{ secrets.TOS_AP_SECRET_KEY }}
+      TOS_AP_ENDPOINT: ${{ secrets.TOS_AP_ENDPOINT }}
+      TOS_AP_REGION: ${{ secrets.TOS_AP_REGION }}
     name: Playwright (${{ matrix.config.name }})
     strategy:
       matrix:
@@ -99,7 +107,7 @@ jobs:
             env:
               - ENABLE_SSR=true
     with:
-      runs-on: lynx-ubuntu-24.04-xlarge
+      runs-on: lynx-container
       is-web: true
       codecov-flags: "e2e"
       run: |
@@ -210,8 +218,8 @@ jobs:
         runs-on:
           - name: Ubuntu
             label: lynx-ubuntu-24.04-medium
-          - name: Windows
-            label: lynx-windows-2022-large
+          # - name: Windows
+          #   label: lynx-windows-2022-large
     name: Vitest (${{ matrix.runs-on.name }})
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
