--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,7 +99,7 @@ jobs:
             env:
               - ENABLE_SSR=true
     with:
-      runs-on: lynx-ubuntu-24.04-xlarge
+      runs-on: lynx-custom-dind
       is-web: true
       codecov-flags: "e2e"
       run: |
