--- a/packages/web-platform/web-rsbuild-plugin/tsconfig.json
+++ b/packages/web-platform/web-rsbuild-plugin/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["ESNext"],
     "noUnusedParameters": false,
     "noImplicitReturns": false,
+    "allowJs": true,
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
 }
