--- a/website/package.json
+++ b/website/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@rstack-dev/doc-ui": "1.8.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@lynx-js/chunk-loading-webpack-plugin": "workspace:*",
@@ -38,8 +38,8 @@
     "@rsbuild/plugin-typed-css-modules": "1.0.2",
     "@rspress/plugin-client-redirects": "2.0.0-beta.3",
     "@rspress/shared": "2.0.0-beta.3",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
+    "@types/react": "npm:@types/react@19.1.2",
+    "@types/react-dom": "^19.1.3",
     "change-case": "^5.4.4",
     "rspress": "2.0.0-beta.3",
     "tailwindcss": "^3.4.17"
