--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -5,6 +5,8 @@ on:
         required: false
       LHCI_GITHUB_APP_TOKEN:
         required: false
+      RELATIVE_CI_KEY:
+        required: false
     inputs:
       runs-on:
         required: true
@@ -62,6 +64,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+          RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
         run: ${{ inputs.run }}
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@ad3126e916f78f00edff4ed0317cf185271ccc2d # v5
