--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,6 +51,12 @@ jobs:
   benchmark:
     needs: build
     uses: ./.github/workflows/workflow-bench.yml
+  bundle-analysis:
+    needs: build
+    uses: ./.github/workflows/workflow-bundle-analysis.yml
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
   test-rspeedy:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
