--- a/.github/workflows/relative-ci.yml
+++ b/.github/workflows/relative-ci.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: lynx-ubuntu-24.04-medium
     steps:
       - name: Send bundle stats and build information to RelativeCI - ${{ matrix.project.name }}
-        uses: relative-ci/agent-action@v2
+        uses: relative-ci/agent-action@38328454d6a23942175eba485fca4fbb807b1f03 #v2
         with:
           artifactName: ${{ matrix.project.name }}-relative-ci-artifacts
           key: ${{ secrets.RELATIVE_CI_KEY }}
