--- a/.github/workflows/workflow-bundle-analysis.yml
+++ b/.github/workflows/workflow-bundle-analysis.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build ${{ matrix.project.name }}
         run: |
           pnpm --filter ${{ matrix.project.path }} run build
-      - uses: relative-ci/agent-upload-artifact-action@v2
+      - uses: relative-ci/agent-upload-artifact-action@a2b5741b4f7e6a989c84ec1a3059696b23c152e5 #v2
         with:
           artifactName: ${{ matrix.project.name }}-relative-ci-artifacts
           webpackStatsFile: ${{ matrix.project.path }}/dist/stats.json
