--- a/.github/workflows/workflow-bundle-analysis.yml
+++ b/.github/workflows/workflow-bundle-analysis.yml
@@ -24,6 +24,7 @@ jobs:
             name: example-react
           - path: ./packages/web-platform/web-explorer
             name: web-explorer
+    name: Build ${{ matrix.project.name }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
