ci: add job name

--- a/.github/workflows/relative-ci.yml
+++ b/.github/workflows/relative-ci.yml
@@ -16,6 +16,7 @@ jobs:
           - path: ./packages/web-platform/web-explorer
             name: web-explorer
     runs-on: lynx-ubuntu-24.04-medium
+    name: Upload ${{ matrix.project.name }}
     steps:
       - name: Send bundle stats and build information to RelativeCI - ${{ matrix.project.name }}
         uses: relative-ci/agent-action@38328454d6a23942175eba485fca4fbb807b1f03 #v2
