--- a/.github/workflows/relative-ci.yml
+++ b/.github/workflows/relative-ci.yml
@@ -1,6 +1,8 @@
 name: RelativeCI
 
 on:
+  # zizmor: ignore[dangerous-triggers] This is a dangerous trigger, but it's ok because we're not using it to trigger other workflows
+  # See: https://relative-ci.com/documentation/setup/agent/github-action/#workflow_run-event
   workflow_run:
     workflows: ["Bundle Analysis"]
     types:
