--- a/.github/workflows/relative-ci.yml
+++ b/.github/workflows/relative-ci.yml
@@ -17,8 +17,10 @@ jobs:
         project:
           - path: ./examples/react
             name: example-react
+            key: RELATIVE_CI_PROJECT_EXAMPLES_REACT_KEY
           - path: ./packages/web-platform/web-explorer
             name: web-explorer
+            key: RELATIVE_CI_PROJECT_WEB_EXPLORER_KEY
     runs-on: lynx-ubuntu-24.04-medium
     name: Upload ${{ matrix.project.name }}
     steps:
@@ -26,5 +28,5 @@ jobs:
         uses: relative-ci/agent-action@38328454d6a23942175eba485fca4fbb807b1f03 #v2
         with:
           artifactName: ${{ matrix.project.name }}-relative-ci-artifacts
-          key: ${{ secrets.RELATIVE_CI_KEY }}
+          key: ${{ secrets[matrix.project.key] }}
           token: ${{ secrets.GITHUB_TOKEN }}
