--- a/.github/workflows/relative-ci.yml
+++ b/.github/workflows/relative-ci.yml
@@ -4,7 +4,7 @@ on:
   # zizmor: ignore[dangerous-triggers] This is a dangerous trigger, but it's ok because we're not using it to trigger other workflows
   # See: https://relative-ci.com/documentation/setup/agent/github-action/#workflow_run-event
   workflow_run:
-    workflows: ["Bundle Analysis", "Deploy", "Test"]
+    workflows: ["Bundle Analysis"]
     types:
       - completed
 
@@ -23,10 +23,13 @@ jobs:
             key: RELATIVE_CI_PROJECT_WEB_EXPLORER_KEY
     runs-on: lynx-ubuntu-24.04-medium
     name: Upload ${{ matrix.project.name }}
+    env:
+      RELATIVE_CI_PROJECT_EXAMPLES_REACT_KEY: ${{ secrets.RELATIVE_CI_PROJECT_EXAMPLES_REACT_KEY }}
+      RELATIVE_CI_PROJECT_WEB_EXPLORER_KEY: ${{ secrets.RELATIVE_CI_PROJECT_WEB_EXPLORER_KEY }}
     steps:
       - name: Send bundle stats and build information to RelativeCI - ${{ matrix.project.name }}
         uses: relative-ci/agent-action@38328454d6a23942175eba485fca4fbb807b1f03 #v2
         with:
           artifactName: ${{ matrix.project.name }}-relative-ci-artifacts
-          key: ${{ secrets[matrix.project.key] }}
+          key: ${{ env[matrix.project.key] }}
           token: ${{ secrets.GITHUB_TOKEN }}
