--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ packages:
   - packages/third-party/*
   - packages/testing-library/*
   - packages/testing-library/examples/*
+  - packages/third-party/*
   - packages/background-only
   - "!packages/testing-library/examples"
   - website
