feat: initial commit for web-core-server
web-core-server is the server-side package for web-core

It's mainly designed for SSR. We'll consider the server-side bts in the future.

--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Run benchmark
         run: |
           . "$HOME/.cargo/env"
-          codspeed run -- pnpm -r run bench
+          codspeed run --workspace-concurrency 1 -- pnpm -r run bench
