--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,26 +106,20 @@ jobs:
       run: |
         pnpm turbo api-extractor -- --local
         if test "$(git diff -- './packages/**/*.api.md' --name-only | wc -l)" -gt 0 ; then
-          echo "API Report Changes Detected"
+          echo "::error::API Report Changes Detected"
           echo "The following API reports have changed:"
           git diff -- './packages/**/*.api.md' --name-only
-          echo "Please run 'turbo api-extractor -- --local' to update them."
+          echo "::error::Please run 'turbo api-extractor -- --local' to update them."
           echo ""
-          git diff -- './packages/**/*.api.md' --name-only | while read file; do
-            echo "::error file=$file::API report needs to be updated"
-          done
           exit 1;
         fi
         git add --intent-to-add .
         if test "$(git diff -- './packages/**/*.api.md' --name-only | wc -l)" -gt 0 ; then
-          echo "API Report Changes Detected"
+          echo "::error::API Report Changes Detected"
           echo "The following API reports have changed:"
           git diff -- './packages/**/*.api.md' --name-only
-          echo "Please run 'turbo api-extractor -- --local' to update them."
+          echo "::error::Please run 'turbo api-extractor -- --local' to update them."
           echo ""
-          git diff -- './packages/**/*.api.md' --name-only | while read file; do
-            echo "::error file=$file::API report needs to be updated"
-          done
           exit 1;
         fi
   test-publish:
