feat: improve load template
generate temp files for SSR.

use v8 hint for CSR & SSR https://v8.dev/blog/explicit-compile-hints

--- a/packages/web-platform/web-core-server/package.json
+++ b/packages/web-platform/web-core-server/package.json
@@ -25,5 +25,6 @@
     "@lynx-js/web-constants": "workspace:*",
     "@lynx-js/web-worker-rpc": "workspace:*",
     "@lynx-js/web-worker-runtime": "workspace:*"
-  }
+  },
+  "preview": true
 }
