--- a/packages/web-platform/web-core-server/package.json
+++ b/packages/web-platform/web-core-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lynx-js/web-core-server",
   "version": "0.12.0",
-  "private": true,
+  "private": false,
   "description": "",
   "keywords": [],
   "repository": {
