--- a/cspell.jsonc
+++ b/cspell.jsonc
@@ -137,6 +137,7 @@
     "lh",
     "queueMicrotask",
     "rustup", // Rust installer/manager
+    "patrickhulce",
   ],
   // Glob
   "ignorePaths": [
