refactor: bundle web-core-server
* removed some top level await

--- a/packages/web-platform/web-core-server/package.json
+++ b/packages/web-platform/web-core-server/package.json
@@ -21,6 +21,10 @@
     "CHANGELOG.md",
     "README.md"
   ],
+  "scripts": {
+    "build": "rslib build",
+    "watch": "rslib build --watch"
+  },
   "devDependencies": {
     "@lynx-js/web-constants": "workspace:*",
     "@lynx-js/web-worker-rpc": "workspace:*",
