docs: update code blocks

--- a/cspell.jsonc
+++ b/cspell.jsonc
@@ -87,6 +87,8 @@
     "renovaterc",
     "rollup", // https://github.com/rollup/rollup
     "runable",
+    "shiki",
+    "shikijs",
     "svitejs", // https://github.com/svitejs/changesets-changelog-github-compact
     "speedscope",
     "tailwindcss",
