--- a/website/package.json
+++ b/website/package.json
@@ -38,6 +38,7 @@
     "@rsbuild/plugin-typed-css-modules": "1.0.2",
     "@rspress/plugin-client-redirects": "2.0.0-beta.6",
     "@rspress/shared": "2.0.0-beta.6",
+    "@shikijs/transformers": "^3.4.2",
     "@types/react": "npm:@types/react@^19.1.4",
     "@types/react-dom": "^19.1.5",
     "change-case": "^5.4.4",
