--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -10,7 +10,6 @@ on:
 # Set default minimum permissions to prevent unnecessary access
 permissions: {}
 
-
 env:
   CI: 1
   TURBO_TELEMETRY_DISABLED: 1
@@ -78,7 +77,8 @@ jobs:
     needs: build-all
     uses: ./.github/workflows/workflow-test.yml
     if: github.repository == 'lynx-family/lynx-stack'
-    permissions: {}
+    permissions:
+      checks: write
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
