ci(workflows): add read permissions for contents and pull-requests
This commit adds 'contents: read' and 'pull-requests: read' permissions to multiple jobs in the GitHub workflows. These permissions are necessary to ensure the workflows can access repository contents and pull request data, which is essential for their proper execution.

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -79,6 +79,8 @@ jobs:
     if: github.repository == 'lynx-family/lynx-stack'
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
