--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,6 +77,8 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
@@ -93,6 +95,8 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
@@ -110,6 +114,8 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     with:
       runs-on: lynx-ubuntu-24.04-medium
       run: |
@@ -167,6 +173,8 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
@@ -197,6 +205,8 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
@@ -207,6 +217,8 @@ jobs:
     uses: ./.github/workflows/workflow-test.yml
     permissions:
       checks: write
+      contents: read
+      pull-requests: read
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
