ci: disable bundle-analysis in merge queue

--- a/.github/workflows/workflow-bundle-analysis.yml
+++ b/.github/workflows/workflow-bundle-analysis.yml
@@ -21,6 +21,7 @@ jobs:
           - path: ./packages/rspeedy/core
             name: rspeedy
     name: Build ${{ matrix.project.name }}
+    if: github.event_name != 'merge_group'
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
