--- a/packages/web-platform/web-rsbuild-plugin/package.json
+++ b/packages/web-platform/web-rsbuild-plugin/package.json
@@ -33,9 +33,9 @@
     "@lynx-js/web-elements": "workspace:*",
     "@rsbuild/core": "catalog:rsbuild",
     "@types/loader-utils": "^2.0.6",
-    "@types/webpack": "^5.28.5",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.3",
+    "webpack-merge": "^6.0.1"
   },
   "peerDependencies": {
     "@lynx-js/web-core": ">0.13.0",
