fix(react/types): export `JSX.ElementType`

--- a/packages/react/runtime/package.json
+++ b/packages/react/runtime/package.json
@@ -15,8 +15,7 @@
     "src"
   ],
   "scripts": {
-    "test": "vitest run --coverage",
-    "test:type": "vitest --typecheck.only"
+    "test": "vitest run --coverage"
   },
   "devDependencies": {
     "@lynx-js/react": "workspace:*",
