--- a/packages/web-platform/web-mainthread-apis/package.json
+++ b/packages/web-platform/web-mainthread-apis/package.json
@@ -15,6 +15,7 @@
   "typings": "dist/index.d.ts",
   "files": [
     "dist",
+    "binary",
     "!dist/**/*.js.map",
     "LICENSE.txt",
     "Notice.txt",
@@ -22,10 +23,12 @@
     "README.md",
     "**/*.css"
   ],
+  "scripts": {
+    "build": "mkdir -p binary && emcc -std=c17 -O3 clang/css-tree-tokenizer/*.c -o binary/tokenizer.js --emit-tsd tokenizer.d.ts -sMALLOC=emmalloc -sINITIAL_HEAP=8MB -sSTACK_SIZE=8MB -sMODULARIZE=1 -sEXPORT_ES6=1 -sNO_EXIT_RUNTIME=1 -sEXPORTED_RUNTIME_METHODS=stringToUTF16,HEAP32 -sEXPORTED_FUNCTIONS=_malloc,_free"
+  },
   "dependencies": {
     "@lynx-js/web-constants": "workspace:*",
     "@lynx-js/web-style-transformer": "workspace:*",
-    "css-tree": "^3.1.0",
     "hyphenate-style-name": "^1.1.0"
   }
 }
