fix(webpack/template)!: remove unused `encodeBinary`

--- a/packages/webpack/css-extract-webpack-plugin/package.json
+++ b/packages/webpack/css-extract-webpack-plugin/package.json
@@ -59,7 +59,7 @@
     "webpack": "^5.99.9"
   },
   "peerDependencies": {
-    "@lynx-js/template-webpack-plugin": "^0.5.0 || ^0.6.0"
+    "@lynx-js/template-webpack-plugin": "^0.5.0 || ^0.6.0 || ^0.7.0"
   },
   "engines": {
     "node": ">=18"
