--- a/packages/webpack/react-refresh-webpack-plugin/package.json
+++ b/packages/webpack/react-refresh-webpack-plugin/package.json
@@ -48,7 +48,7 @@
     "webpack": "^5.99.9"
   },
   "peerDependencies": {
-    "@lynx-js/react-webpack-plugin": "^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0"
+    "@lynx-js/react-webpack-plugin": "^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0 || ^0.7.0"
   },
   "engines": {
     "node": ">=18"
