feat: introduce `@lynx-js/use-sync-external-store`

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -42,6 +42,8 @@
 
       "packages/tools/**",
 
+      "packages/use-sync-external-store/test/**",
+
       "packages/webpack/*/runtime/**",
 
       "packages/web-platform/**",
