--- a/packages/web-platform/offscreen-document/package.json
+++ b/packages/web-platform/offscreen-document/package.json
@@ -2,7 +2,7 @@
   "name": "@lynx-js/offscreen-document",
   "version": "0.0.4",
   "private": false,
-  "description": "Offscreen Document allows developers to use partical DOM in WebWorker",
+  "description": "Offscreen Document allows developers to use particular DOM in WebWorker",
   "keywords": [
     "WebWorker",
     "DOM",
