test: migrate tests from `react`

--- a/packages/use-sync-external-store/package.json
+++ b/packages/use-sync-external-store/package.json
@@ -41,6 +41,7 @@
     "LICENSE"
   ],
   "scripts": {
+    "test": "vitest",
     "test:type": "vitest --typecheck.only"
   },
   "devDependencies": {
