--- a/packages/rspeedy/plugin-react-alias/package.json
+++ b/packages/rspeedy/plugin-react-alias/package.json
@@ -37,7 +37,7 @@
     "test": "pnpm -w run test --project rspeedy/react-alias"
   },
   "dependencies": {
-    "oxc-resolver": "^10.0.0"
+    "unrs-resolver": "^1.7.3"
   },
   "devDependencies": {
     "@lynx-js/react": "workspace:*",
