chore: remove cspell

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -87,7 +87,7 @@
     {
       "groupName": "linting",
       "groupSlug": "linting",
-      "matchPackageNames": ["/eslint/", "/^@cspell/*/", "cspell"],
+      "matchPackageNames": ["/eslint/"],
     },
     {
       "groupName": "Typia",
