--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,37 +16,24 @@ packages:
   - packages/background-only
   - "!packages/testing-library/examples"
   - website
-
-# Default catalogs
 catalog:
-  "@microsoft/api-extractor": "7.52.8"
-
+  "@microsoft/api-extractor": 7.52.8
 catalogs:
-  # Rsbuild monorepo packages
   rsbuild:
-    "@rsbuild/core": "1.3.21"
-    "@rsbuild/webpack": "1.3.2"
-    "@rsbuild/plugin-less": "1.2.4"
-    "@rsbuild/plugin-sass": "1.3.1"
-    "@rsbuild/plugin-webpack-swc": "1.1.1"
-
-  # Rspack monorepo packages
+    "@rsbuild/core": 1.3.21
+    "@rsbuild/webpack": 1.3.2
+    "@rsbuild/plugin-less": 1.2.4
+    "@rsbuild/plugin-sass": 1.3.1
+    "@rsbuild/plugin-webpack-swc": 1.1.1
   rspack:
-    "@rspack/cli": "1.3.11"
-    "@rspack/core": "1.3.11"
-    "@rspack/test-tools": "1.3.11"
-
-overrides:
-  "@rspack/core": "$@rspack/core"
-  "@rsbuild/core>@rspack/core": "$@rspack/core"
-
-patchedDependencies:
-  "@napi-rs/cli@2.18.4": "patches/@napi-rs__cli@2.18.4.patch"
-  "@rollup/plugin-typescript": "patches/@rollup__plugin-typescript.patch"
-
+    "@rspack/cli": 1.3.11
+    "@rspack/core": 1.3.11
+    "@rspack/test-tools": 1.3.11
+ignoredBuiltDependencies:
+  - core-js
 onlyBuiltDependencies:
   - dprint
   - esbuild
-
-ignoredBuiltDependencies:
-  - core-js
+overrides:
+  "@rspack/core": $@rspack/core
+  "@rsbuild/core>@rspack/core": $@rspack/core
