feat(rspeedy/react): alias `use-sync-external-store`

--- a/packages/rspeedy/plugin-react/package.json
+++ b/packages/rspeedy/plugin-react/package.json
@@ -43,6 +43,7 @@
     "@lynx-js/react-webpack-plugin": "workspace:*",
     "@lynx-js/runtime-wrapper-webpack-plugin": "workspace:*",
     "@lynx-js/template-webpack-plugin": "workspace:*",
+    "@lynx-js/use-sync-external-store": "workspace:*",
     "background-only": "workspace:^"
   },
   "devDependencies": {
