--- a/packages/rspeedy/core/package.json
+++ b/packages/rspeedy/core/package.json
@@ -63,7 +63,7 @@
     "@lynx-js/vitest-setup": "workspace:*",
     "@microsoft/api-extractor": "catalog:",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@rsbuild/webpack": "catalog:rsbuild",
+    "@rsbuild/webpack": "1.3.2",
     "@samchon/openapi": "4.3.2",
     "chokidar": "^4.0.3",
     "commander": "^13.1.0",
