--- a/packages/rspeedy/plugin-react/package.json
+++ b/packages/rspeedy/plugin-react/package.json
@@ -54,10 +54,10 @@
     "@microsoft/api-extractor": "catalog:",
     "@rollup/plugin-typescript": "^12.1.2",
     "@rsbuild/core": "catalog:rsbuild",
-    "@rsbuild/plugin-sass": "catalog:rsbuild",
+    "@rsbuild/plugin-sass": "1.3.2",
     "@rsbuild/plugin-typed-css-modules": "1.0.2",
-    "@rsbuild/plugin-webpack-swc": "catalog:rsbuild",
-    "@rsbuild/webpack": "catalog:rsbuild",
+    "@rsbuild/plugin-webpack-swc": "1.1.1",
+    "@rsbuild/webpack": "1.3.2",
     "@samchon/openapi": "4.3.2",
     "tailwindcss": "^3.4.17",
     "type-fest": "^4.41.0",
