--- a/packages/rspeedy/upgrade-rspeedy/package.json
+++ b/packages/rspeedy/upgrade-rspeedy/package.json
@@ -41,8 +41,8 @@
     "@lynx-js/types": "3.3.0",
     "@lynx-js/web-core": "workspace:*",
     "@lynx-js/web-elements": "workspace:*",
-    "@rsbuild/plugin-less": "catalog:rsbuild",
-    "@rsbuild/plugin-sass": "catalog:rsbuild",
+    "@rsbuild/plugin-less": "1.2.4",
+    "@rsbuild/plugin-sass": "1.3.2",
     "commander": "^13.1.0",
     "detect-indent": "^7.0.1",
     "memfs": "^4.17.2",
