ci: make the all-on-ui to be the default rendering mode
[Feature]: Breaking Change: set the all-on-ui mode to be the default render #1080

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,9 +80,9 @@ jobs:
         config:
           - name: Default
             env: []
-          - name: All on UI
+          - name: MULTI_THREAD
             env:
-              - ALL_ON_UI=true
+              - ENABLE_MULTI_THREAD=true
           - name: FP only
             env:
               - ENABLE_SSR=true
