--- a/biome.jsonc
+++ b/biome.jsonc
@@ -38,6 +38,8 @@
 
       "packages/react/index.d.ts",
       "packages/react/runtime/**",
+      
+      "packages/react-actual/**",
 
       "packages/tools/**",
 
