--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -7,8 +7,9 @@ on:
         required: false
     inputs:
       runs-on:
-        required: true
+        required: false
         type: string
+        default: '[{"label": "lynx-ubuntu-24.04-medium", "name": "Ubuntu"}]'
       run:
         required: true
         type: string
@@ -31,13 +32,13 @@ env:
 jobs:
   check:
     timeout-minutes: 30
-    runs-on: ${{ inputs.runs-on }}
+    strategy:
+      matrix:
+        runs-on: ${{ fromJson(inputs.runs-on) }}
+    name: Check (${{ matrix.runs-on.name }})
+    runs-on: ${{ matrix.runs-on.label }}
     permissions: {}
     steps:
-      - name: set apt sources - use tls
-        run: |
-          sudo sed -i 's|http:|https:|' /etc/apt/sources.list.d/ubuntu.sources
-          sudo sed -i 's|http:|https:|' /etc/apt/sources.list.d/*.list
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
           # Codecov requires fetch-depth: 0
